--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   node1:
-    image: aeternity/aeternity
+    image: aeternity/aeternity:v2.3.0
     hostname: node1
     environment:
       EPOCH_CONFIG: /home/epoch/epoch.yaml
@@ -14,7 +14,7 @@ services:
       - node1_db:/home/epoch/node/data/mnesia
 
   node2:
-    image: aeternity/aeternity
+    image: aeternity/aeternity:v2.3.0
     hostname: node2
     environment:
       EPOCH_CONFIG: /home/epoch/epoch.yaml
@@ -26,7 +26,7 @@ services:
       - node2_db:/home/epoch/node/data/mnesia
 
   node3:
-    image: aeternity/aeternity
+    image: aeternity/aeternity:v2.3.0
     hostname: node3
     environment:
       EPOCH_CONFIG: /home/epoch/epoch.yaml
@@ -41,9 +41,9 @@ services:
     image: nginx:1.13.8
     hostname: proxy
     ports:
-     - "3001:3001"
-     - "3002:3002"
-     - "3003:3003"
+      - "3001:3001"
+      - "3002:3002"
+      - "3003:3003"
 
     volumes:
       - ./docker/nginx-default.conf:/etc/nginx/conf.d/default.conf
